--- a/Frugl/Frugl/Base.lproj/Main.storyboard
+++ b/Frugl/Frugl/Base.lproj/Main.storyboard
@@ -212,7 +212,113 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m4y-26-HfM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1329" y="1185"/>
+            <point key="canvasLocation" x="1375" y="1229"/>
+        </scene>
+        <!--Pie-->
+        <scene sceneID="fem-jZ-YdT">
+            <objects>
+                <viewController id="l14-Kc-5aY" customClass="PieChartViewController" customModule="Frugl" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="reM-a4-J6J">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6QY-mt-aMe">
+                                <rect key="frame" x="8" y="425" width="377" height="337"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="337" id="cAs-th-DFE"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="pieCell" id="T5z-Mj-RDd" customClass="PieChartTableViewCell" customModule="Frugl" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="377" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="T5z-Mj-RDd" id="OVR-Oh-3P0">
+                                            <rect key="frame" x="0.0" y="0.0" width="377" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Monthly Budget Goal)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMb-vd-JN0">
+                                <rect key="frame" x="110.33333333333333" y="386" width="172.33333333333337" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="v8T-80-sfZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="v8T-80-sfZ" firstAttribute="bottom" secondItem="6QY-mt-aMe" secondAttribute="bottom" constant="7" id="EDL-SL-ab3"/>
+                            <constraint firstItem="6QY-mt-aMe" firstAttribute="top" secondItem="MMb-vd-JN0" secondAttribute="bottom" constant="18" id="H5j-Q1-zGd"/>
+                            <constraint firstItem="6QY-mt-aMe" firstAttribute="centerX" secondItem="MMb-vd-JN0" secondAttribute="centerX" id="Xaz-dR-e98"/>
+                            <constraint firstItem="v8T-80-sfZ" firstAttribute="trailing" secondItem="6QY-mt-aMe" secondAttribute="trailing" constant="8" id="dPE-7K-pqF"/>
+                            <constraint firstItem="6QY-mt-aMe" firstAttribute="leading" secondItem="v8T-80-sfZ" secondAttribute="leading" constant="8" id="wuU-iO-WmX"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Pie" image="chart.pie" catalog="system" id="jDZ-bo-dRt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="apL-Ah-lKp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2222" y="1229"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="5XE-a7-qid">
+            <objects>
+                <viewController id="TuM-FB-eRP" customClass="CalendarViewController" customModule="Frugl" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lwT-VG-F0w">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="F7S-eP-n8R">
+                                <rect key="frame" x="8" y="405.33333333333326" width="377" height="345.66666666666674"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="calendarCell" id="mgW-Ch-rIv" customClass="CalendarTableViewCell" customModule="Frugl" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="377" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mgW-Ch-rIv" id="oeP-DJ-Wz3">
+                                            <rect key="frame" x="0.0" y="0.0" width="377" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="191" translatesAutoresizingMaskIntoConstraints="NO" id="np7-YK-9Gv">
+                                <rect key="frame" x="8" y="377" width="377" height="20.333333333333314"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="(Budget)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tRC-YO-PEB">
+                                        <rect key="frame" x="0.0" y="0.0" width="100.66666666666667" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Expenses)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFm-Xo-orJ">
+                                        <rect key="frame" x="291.66666666666669" y="0.0" width="85.333333333333314" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hex-az-6sa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hex-az-6sa" firstAttribute="trailing" secondItem="F7S-eP-n8R" secondAttribute="trailing" constant="8" id="0Re-ux-rEP"/>
+                            <constraint firstItem="hex-az-6sa" firstAttribute="trailing" secondItem="np7-YK-9Gv" secondAttribute="trailing" constant="8" id="E8d-Lv-IPx"/>
+                            <constraint firstItem="hex-az-6sa" firstAttribute="bottom" secondItem="F7S-eP-n8R" secondAttribute="bottom" constant="18" id="Fsd-PT-W60"/>
+                            <constraint firstItem="np7-YK-9Gv" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" constant="8" id="Y3b-hi-7LC"/>
+                            <constraint firstItem="np7-YK-9Gv" firstAttribute="top" secondItem="hex-az-6sa" secondAttribute="top" constant="318" id="jDS-PX-QMJ"/>
+                            <constraint firstItem="F7S-eP-n8R" firstAttribute="top" secondItem="np7-YK-9Gv" secondAttribute="bottom" constant="8" id="t2Y-my-tGw"/>
+                            <constraint firstItem="F7S-eP-n8R" firstAttribute="leading" secondItem="hex-az-6sa" secondAttribute="leading" constant="8" id="yo8-en-Szg"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="sKH-Mc-fOM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iKx-rF-gnS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3067.9389312977096" y="1228.8732394366198"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="nvN-Sx-dLa">
@@ -225,15 +331,15 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="dBS-nb-vcy">
                                 <rect key="frame" x="80" y="139" width="233" height="395"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="748" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3A4-oT-c9C">
+                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="748" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hsw-BK-aoq">
                                         <rect key="frame" x="0.0" y="0.0" width="233" height="0.0"/>
-                                        <menu key="menu" title="Category" id="7zc-vX-bXp">
+                                        <menu key="menu" id="ItR-Rs-HJ7">
                                             <children>
-                                                <command title="Recurring" id="gUz-u7-PxY"/>
-                                                <command title="Individual" id="giz-pO-yz2"/>
+                                                <command title="Item 1" id="ClM-kB-sFm"/>
+                                                <command title="Item 2" id="uay-EH-rei"/>
                                             </children>
                                         </menu>
-                                        <state key="normal" title="Category"/>
+                                        <state key="normal" title="Button"/>
                                     </button>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Expense Name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pdp-2n-h3F">
                                         <rect key="frame" x="0.0" y="46" width="233" height="29"/>
@@ -250,7 +356,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Optional First Alert..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xy4-nW-Idy">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Optional First Alert..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xy4-nW-Idy">
                                         <rect key="frame" x="0.0" y="281" width="233" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -282,7 +388,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UlV-FJ-0HM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2108" y="1203"/>
+            <point key="canvasLocation" x="1375" y="1896"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yFx-LR-vyR">
@@ -297,6 +403,8 @@
                     <connections>
                         <segue destination="ztZ-mf-VA6" kind="relationship" relationship="viewControllers" id="lnd-h8-ADg"/>
                         <segue destination="4zY-4S-y8Y" kind="relationship" relationship="viewControllers" id="CIs-62-aJ4"/>
+                        <segue destination="l14-Kc-5aY" kind="relationship" relationship="viewControllers" id="rXT-cQ-07R"/>
+                        <segue destination="TuM-FB-eRP" kind="relationship" relationship="viewControllers" id="CCp-ih-CfE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xZ4-9p-hfo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -440,10 +548,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ycr-AI-ygi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="597.70992366412213" y="1184.5070422535211"/>
+            <point key="canvasLocation" x="598" y="1229"/>
         </scene>
     </scenes>
     <resources>
+        <image name="chart.pie" catalog="system" width="128" height="123"/>
         <image name="checkmark.circle" catalog="system" width="128" height="123"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="secondaryLabelColor">
